fix bug of overlapping thumbs up and thumbs down button on mobile

--- a/template/style.css
+++ b/template/style.css
@@ -15,7 +15,7 @@
 .row {margin:0;}
 #latest-h3{width:100%;padding-right:2%;padding-left:2%;padding-top:15px;padding-bottom:15px;background:#ccc;}
 #recipe-title{background:url(img/background.png);width:100%;min-height:50px;height:auto;z-index:10;position:relative;bottom:80px;padding-top:5px;margin:0 auto;}
-#recipe-votes {left:10px;background:#e8e8e8;min-width:80px;max-width:110px;width:auto;padding:5px;height:30px;position:relative;bottom:95%;z-index:10;color:#303030;}
+#recipe-votes {left:10px;background:#e8e8e8;min-width:80px;max-width:120px;width:auto;padding:5px;height:30px;position:relative;bottom:95%;z-index:10;color:#303030;}
 #recipe-votes li{list-style-type:none;float:left;margin-right:8px;}
 #recipe-title h2 {font-size:100%;text-align:center;color:#f8f8f8;letter-spacing:1px;}
 .welcome-msg{padding:15px 0px;}
